--- a/README.rdoc
+++ b/README.rdoc
@@ -15,7 +15,10 @@ Tested with Chrome, Firefox, Safari, Opera and IE 7
 1. Install gems
     bundle install
 
-2. Make sure the following environment variables are set: S3_UPLOADER_BUCKET, S3_UPLOADER_ACCESS_KEY, S3_UPLOADER_SECRET_ACCESS_KEY
+2. Make sure the following environment variables are set:
+  * S3_UPLOADER_BUCKET
+  * S3_UPLOADER_ACCESS_KEY
+  * S3_UPLOADER_SECRET_ACCESS_KEY
 
 3. Deploy uploader javascript and form to s3
     bundle exec rake uploader:deploy
