--- a/README.rdoc
+++ b/README.rdoc
@@ -5,7 +5,7 @@ Features:
 * No flash :)
 * File Progress Indicator (Chrome, Firefox, Safari)
 * Multiple file selection, parallel upload (Chrome, Firefox, Safari)
-* Drag'n'Drop (Firefox 4+, Safari 5+ [buggy on windows], Google Chrome)
+* Drag'n'Drop (Firefox 4+, Safari 5+ - buggy on windows, Google Chrome)
 * Internet Explorer and Opera fall back to iframe transport single file uploads
 
 Tested with Chrome, Firefox, Safari, Opera and IE 7
