removed rubymine files

--- a/README.rdoc
+++ b/README.rdoc
@@ -12,6 +12,9 @@ Features:
 
 Tested with Chrome, Firefox, Safari, Opera and IE 7
 
+Get's around S3's lack of cross domain access headers by storing the upload form on s3, embedded in an iframe.
+Upload Progress is displayed on host server by utilizing postMessage browser communication.
+
 == Getting Started
 
 1. Install gems
