--- a/README.rdoc
+++ b/README.rdoc
@@ -12,7 +12,7 @@ Features:
 
 Tested with Chrome, Firefox, Safari, Opera and IE 7
 
-Get's around S3's lacking cross domain access header support by storing the upload form on s3, embedded in an iframe.
+Gets around S3's lacking cross domain access header support by storing the upload form on s3, embedded in an iframe.
 Upload progress is displayed on the host server by utilizing postMessage browser communication.
 
 After a file is uploaded a post ajax request is made to create a resource for the uploaded file in the db.
