--- a/README.rdoc
+++ b/README.rdoc
@@ -8,7 +8,7 @@ Features:
 * Uploads straight to S3 without hitting the server first
 * File Progress Indicator (Chrome, Firefox, Safari)
 * Multiple file selection, parallel upload (Chrome, Firefox, Safari)
-* Drag'n'Drop (Firefox 4+, Safari 5+ - buggy on windows, Google Chrome)
+* Drag'n'Drop (Chrome, Firefox 4+, Safari 5+ - buggy on windows)
 * Internet Explorer and Opera fall back to iframe transport single file uploads
 
 Tested with Chrome, Firefox, Safari, Opera and IE 7
