--- a/README.rdoc
+++ b/README.rdoc
@@ -41,14 +41,11 @@ After a file is uploaded a post ajax request is made to create a resource for th
 
 ==What this gem is doing
 
-* The app adds the params to the form that S3 requires to upload a file. Specifically, the policy, the bucket, the signature, & the access key.
+* The app adds the params to the form that S3 requiresSpecifically, the policy, the bucket, the signature, & the access key.
 
-* The trickiest of these to generate it the signature and S3 requires files have a signature. The signature is an Base64 encoded hash of the S3 policy using your S3 secret access key. 
+* The trickiest of these params to generate is the signature. The signature is a Base64 encoded hash of the S3 policy using your S3 secret access key. This signature in the s3_signature method in the UploadsHelper class. 
 
-* The gem generates this signature in the s3_signature method in the UploadsHelper class. 
-
-* The uploads helper class also has methods to generate the iframe with the necessary params.
-
+* The s3_uploader method in the UploadsHelper class generate the iframe with the necessary params.
 
 
 == Notes
