--- a/README.rdoc
+++ b/README.rdoc
@@ -53,5 +53,7 @@ After a file is uploaded a post ajax request is made to create a resource for th
 
 * S3 is very particular about what params have to accompany a file upload. Specifically, the policy, the bucket, the signature, & the access key.
 
-* The signature is the trickiest to generate. The signature is a Base64 encoded hash of the S3 policy using your S3 secret access key. This signature in the s3_signature method in the UploadsHelper class. The s3_uploader method in the UploadsHelper class generate the iframe with the necessary params.
+* The signature is the trickiest to generate. The signature is a Base64 encoded hash of the S3 policy using your S3 secret access key.
+  This signature in the s3_signature method in the UploadsHelper class. The s3_uploader method in the UploadsHelper class generates the
+  iframe with the necessary params.
 
